--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,25 @@
+body {
+    font-family: 'Walter Turncoat', cursive;
+    font-size: 1.3em;
+    margin: 48px;
+}
+
 .active {
     font-weight: bold;
 }
+
+.card {
+    width: 250px;
+    height: 500px;
+    float: left;
+    border: 1px #ccc solid;
+    box-shadow: 12px 9px 52px 3px rgba(0,0,0,0.85);
+    background: #DFEFFF;
+    cursor: pointer;
+    padding: 12px;
+    margin: 24px;
+    
+    overflow-y: hidden;
+}
+
+
