--- a/static/style.css
+++ b/static/style.css
@@ -22,4 +22,16 @@ body {
     overflow-y: hidden;
 }
 
+.hidden-card {
+    float: left;
+    width: 40px;
+    height: 60px;
+    background: #f44;
+    border: 1px #ccc solid;
+    margin: 6px;
 
+}
+
+.handovr {
+    clear: both;
+}
