--- a/static/style.css
+++ b/static/style.css
@@ -35,3 +35,24 @@ body {
 .handovr {
     clear: both;
 }
+
+#my-turn-indicator {
+    position: fixed;
+    top: 40px;
+    left: 40px;
+    font-size: 2em;
+  animation: blink 1s linear infinite;
+  -webkit-animation: blink 1s linear infinite;
+    
+}
+
+@keyframes blink {  
+  0% { opacity: 1.0; }
+  50% { opacity: 0.0; }
+  100% { opacity: 1.0; }
+}
+@-webkit-keyframes blink {
+  0% { opacity: 1.0; }
+  50% { opacity: 0.0; }
+  100% { opacity: 1.0; }
+}
