--- a/static/style.css
+++ b/static/style.css
@@ -36,14 +36,16 @@ body {
     clear: both;
 }
 
-#my-turn-indicator {
+#my-turn-indicator, #other-turn-indicator {
     position: fixed;
     top: 40px;
     left: 40px;
     font-size: 2em;
-  animation: blink 1s linear infinite;
-  -webkit-animation: blink 1s linear infinite;
-    
+  
+}
+#my-turn-indicator {
+     animation: blink 1s linear infinite;
+    -webkit-animation: blink 1s linear infinite;
 }
 
 @keyframes blink {  
